<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginTop="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/mailedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circle"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/enter_your_email"
            android:padding="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circle"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/enter_your_password"
            android:padding="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/lobtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circle"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="167dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:text="@string/dvfbhj"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mforget"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passedit"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="19dp"
            android:text="@string/bnzsa"
            android:padding="10dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/mcreate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lobtn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="93dp"
            android:padding="10dp"
            android:text="@string/need_a_new_account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/mlog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mcreate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="93dp"
            android:padding="10dp"
            android:text="@string/login_with_your"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/logbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mlog"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:padding="10dp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>