<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/mailedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circle"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/enter_your_email"
                android:padding="10dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passedit"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mailedit"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/regbtn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passedit"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:padding="10dp"
                android:text="@string/jksfe"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mlog"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regbtn"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="93dp"
                android:padding="10dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>